

Revision History:
28-Jun-2004
   Additions:
       1. rfe #901172 "text/xhtml" is now recognized as a valid HTML "content-type"

   Problems fixed:
       1. bug #959918: Javascript setting of numeric values included trailing zeros after the decimal point.
       2. bug #957882: URL path elements containing leading '.' were being stripped of those periods.

27-Jun-2004
   Thanks to Fabrizio Giustina for adding an entity-resolver to support local use of ServletUnit with a regular web.xml

   Additions:
       1. patch #915296: Local copies of the 2.2 and 2.3 web.xml dtds are now consulted if specified, rather than connecting to
          the Sun website.
       2. HTMLElement now supports a getText() method to return the text contents of any element
       3. WebResponse now supports getTextBlocks and getFirstMatchingTextBlock to retrieve headers and paragraphs from a page.

25-Jun-2004
   Problems fixed:
       1. bug #960307 meta tags within <noscript> tags were not being ignored when scripting was disabled

24-Jun-2004
   Problems fixed:
       1. bug #978770 Clicking on a button outside of a form is now supported
       2. bug #838947 Document.getElementById now returns null if no such element exists

23-Jun-2004
   Problems fixed:
       1. bug #974380 When using a DNS listener, host header no longer includes ':-1' if the port is not specified

22-Jun-2004
   Problems fixed:
       1. bug #964940 The Referer header was not being sent again if the original request was redirected

21-Jun-2004
   Problems fixed:
       1. bug #974675 Javascript function Window.open did not honor "_self" tag for window name.

18-Jun-2004
   Additions:
       1. Enhanced http logging to show target server, request header line, and received URL

15-Jun-2004
   Thanks to Phil Zampino for finding a fixing a problem in PseudoServer's handling of very long requests.

   Problems fixed:
        1. PseudoServer would hang when sent a very long request.

13-Jun-2004
   Problems fixed: